--- a/styles/Global.css
+++ b/styles/Global.css
@@ -517,7 +517,7 @@
 }
 
   .RedEndScreen {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -525,6 +525,23 @@
     height: 100vh;
     width: 100vw;
     background: url(../imgs/RedGreenAssestsUi/RedBg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+    user-select: none;
+    color: #fff;
+    overflow: hidden;
+  }
+
+  .GreenEndScreen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    width: 100vw;
+    background: url(../imgs/RedGreenAssestsUi/GreenBg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
@@ -556,6 +573,14 @@
     filter: drop-shadow(0 0 33px #FF1A1A);
   }
 
+  .SecondPDeathUiGreen {
+    font-size: 50px;
+    position: absolute;
+    font-family: "RangerRegular", sans-serif;
+    transform: translateY(13px);
+    filter: drop-shadow(0 0 33px #0C9D61);
+  }
+
   .BoxDeathKillAllDiv {
     display: flex;
     flex-direction: column;
@@ -573,23 +598,85 @@
 
   .RedKillDeathDiv {
     display: flex;
-    gap: 18px;
+    gap: 25px;
     font-family: "Afacad", sans-serif;
-    font-size: 22px;
+    font-size: 21px;
     font-weight: 800;
     background: #ff0000;
     background: linear-gradient(164deg, rgba(255, 0, 0, 0) 20%, rgba(235, 0, 0, 0.2) 100%);
     border: 1px #ffffff2d solid;
-    width: 10.5rem;
+    width: 11rem;
     height: 3.5rem;
     justify-content: center;
     border-radius: 8px;
     align-items: center;
   }
 
-  .RedTeamTopKillerDiv {
-    width: calc(21rem + 10px);
+  .GreenKillDeathDiv {
+    display: flex;
+    gap: 25px;
+    font-family: "Afacad", sans-serif;
+    font-size: 21px;
+    font-weight: 800;
+    background: #0C9D61;
+    background: linear-gradient(164deg,rgba(12, 157, 97, 0) 20%, rgba(12, 157, 97, 0.2) 100%);
+    border: 1px #ffffff2d solid;
+    width: 11rem;
     height: 3.5rem;
+    justify-content: center;
+    border-radius: 8px;
+    align-items: center;
+  }
+
+  .GreenTimerTeamTopKillerDiv {
+    width: calc(22rem + 10px);
+    height: 3.8rem;
+    border: 1px #ffffff2d solid;
+    border-radius: 8px;
+    background: #0C9D61;
+    background: linear-gradient(164deg,rgba(12, 157, 97, 0) 20%, rgba(12, 157, 97, 0.2) 100%);
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .TimerTeamTopKillerDiv {
+    width: calc(22rem + 10px);
+    height: 3.8rem;
+    border: 1px #ffffff2d solid;
+    border-radius: 8px;
+    background: #ff0000;
+    background: linear-gradient(164deg, rgba(255, 0, 0, 0) 40%, rgba(235, 0, 0, 0.2) 100%);
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .TimerTeamTopKillerDiv p:nth-of-type(1) {
+    font-family: "Afacad", sans-serif;
+    font-weight: 800;
+    font-size: 20px;
+  }
+
+  .TimerTeamTopKillerDiv p:nth-of-type(2) {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+  }
+
+  .RedTeamTopKillerDiv {
+    width: calc(22rem + 10px);
+    height: 3.8rem;
     border: 1px #ffffff2d solid;
     border-radius: 8px;
     background: #ff0000;
@@ -602,6 +689,25 @@
     align-items: center;
     text-align: center;
     padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .BlueTeamTopKillerDiv {
+    width: calc(22rem + 10px);
+    height: 3.8rem;
+    border: 1px #ffffff2d solid;
+    border-radius: 8px;
+    background: #0087FF;
+    background: linear-gradient(164deg, rgba(0, 135, 255, 0) 20%, rgba(0, 135, 255, 0.2) 100%);
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   .RedTopKillerLine {
@@ -616,6 +722,18 @@
     left: 0rem;
   }
 
+  .BlueTopKillerLine {
+    height: 3.4rem;
+    width: 5px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background: #0087ff;
+    -webkit-box-shadow: 18px 0px 60px 5px #0087ff; 
+    box-shadow: 18px 0px 60px 5px #0087ff;
+    position: absolute;
+    left: 0rem;
+  }
+
   .DetailPlayerTopKilerUi {
     display: flex;
     flex-direction: row;
@@ -626,7 +744,7 @@
     text-align: center;
     font-family: "Afacad", sans-serif;
     font-weight: 800;
-    font-size: 17px;
+    font-size: 19px;
 
   }
 
@@ -644,7 +762,20 @@
     width: 25px;
     border-radius: 100%;
     position: absolute;
+  }
 
+  .TextIndeDeathUiInside {
+    font-family: "Afacad", sans-serif;
+    font-weight: 800;
+    font-size: 22px;
+  }
+
+  .TextIndeDeathUiInside span {
+    font-family: "Roboto" , sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    padding-left: 5px;
+    color: #ffffffc8;
   }
 
 .loader {
