--- a/styles/Global.css
+++ b/styles/Global.css
@@ -258,7 +258,7 @@
     height: 10rem;
     position: absolute;
     top: 0;
-    display: none;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -517,7 +517,7 @@
 }
 
   .RedEndScreen {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -531,6 +531,8 @@
     user-select: none;
     color: #fff;
     overflow: hidden;
+    position: absolute;
+    z-index: 100 !important;
   }
 
   .GreenEndScreen {
@@ -548,6 +550,8 @@
     user-select: none;
     color: #fff;
     overflow: hidden;
+    position: absolute;
+    z-index: 100 !important;
   }
 
   .TextOfDeathUi {
