--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -252,6 +252,22 @@
   right: 3rem;
 }
 
+.InsideNormalButtonRequest {
+  width: 123px;
+  height: 43px;
+  background: #00000083;
+  border: 1px solid #460909;
+  position: relative;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "inter", sans-serif;
+  font-weight: 700;
+  font-size: 13px;
+  color: #a20b0b;
+}
+
 .InsideNormalButton {
   width: 173px;
   height: 43px;
@@ -282,6 +298,36 @@
   left: 0;
 }
 
+
+.LineTopJoinNormalReuquest {
+  width: 90px;
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 0, 0, 0.812) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  position: absolute;
+  transition: all ease 0.3s;
+  top: 0;
+  left: 0;
+}
+
+.LineBottomJoinNormalReuquest {
+  width: 90px;
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 0, 0, 0.812) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  position: absolute;
+  transition: all ease 0.3s;
+  bottom: 0;
+  right: 0;
+}
 .LineBottomJoinNormal {
   width: 90px;
   height: 1px;
@@ -381,17 +427,20 @@ backdrop-filter: blur(24.2px);
   color: #ffffffe0;
 }
 
+.JoinandRequestButton {
+  display: flex;
+  position: absolute;
+  bottom:1.2rem;
+  gap: 10px;
+
+}
+
 .NormalButtonJoinPass {
   display: flex;
-  width: 390px;
-  height: 55px;
   background-color: #911e2000;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  position: absolute;
-  bottom: .8rem;
-  gap: 10px;
 }
 
 .NormalButtonJoinPass:hover .LineTopJoinNormal {
