--- a/styles/Global.css
+++ b/styles/Global.css
@@ -883,7 +883,7 @@
 
 .RequestNotifBox {
   width: 380px;
-  height: 110px;
+  height: 90px;
   background: #000000;
   background: linear-gradient(94deg, rgba(0, 0, 0, 0.127) -10%, rgba(0, 0, 0, 0.867) 88%);
   overflow: hidden;
@@ -910,4 +910,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.DeadLineBehindSteamBgRequest {
+  position: absolute;
+  width:70px;
+  height:70px;
+}
+
+.diamond-wrapperTopUiDeathMatchRequest {
+  width:40px;
+  height:40px;
+  overflow: hidden;
+  transform: rotate(45deg);
+  filter: drop-shadow(0 0 0.75rem #e3e3e389);
+  animation: pulseShadowDeathMatch 2s infinite ease-in-out;
+}
+
+.diamond-wrapperTopUiDeathMatchRequest img {
+  max-width: 100%;
+  transform: rotate(-45deg) scale(1.42);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
