--- a/styles/Global.css
+++ b/styles/Global.css
@@ -934,3 +934,28 @@
   height: 100%;
   object-fit: cover;
 }
+
+.DeatailTextsRequest {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-left: 25px;
+}
+
+.DeatailTextsRequest p:nth-of-type(1) {
+  font-size: 18px;
+  max-width: 200px;
+}
+
+.DeatailTextsRequest p:nth-of-type(1) span {
+  font-size: 13px;
+  max-width: 200px;
+  font-family: "Roboto", sans-serif;
+
+}
+
+.DeatailTextsRequest p:nth-of-type(2) {
+  font-family: "Roboto", sans-serif;
+  font-size: 11px;
+  max-width: 200px;
+}
