--- a/styles/Global.css
+++ b/styles/Global.css
@@ -1027,6 +1027,34 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  bottom: 2rem;
+  bottom: 3rem;
   font-family: 'RangerRegular',sans-serif;
+}
+
+.TextBottomScreenDiv img {
+  width: 30px;
+}
+
+.KillTextDownScreen {
+  width: 100vw;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.KillTextDownScreen p:nth-of-type(1){
+  -webkit-text-stroke: 1px #ffffff51;
+  font-family: "RangerRegular", sans-serif;
+  color: transparent;
+  font-size: 24px;
+  position: absolute;
+}
+
+
+.KillTextDownScreen p:nth-of-type(2) {
+font-size: 20px;
+position: absolute;
+font-family: "RangerRegular", sans-serif;
+transform: translateY(6px);
+filter: drop-shadow(0 0 33px #FF1A1A);
 }
