--- a/styles/Global.css
+++ b/styles/Global.css
@@ -1029,14 +1029,14 @@
   align-items: center;
   bottom: 3rem;
   font-family: 'RangerRegular',sans-serif;
+  width: 100vw;
 }
 
 .TextBottomScreenDiv img {
-  width: 30px;
+  width: 60px;
 }
 
 .KillTextDownScreen {
-  width: 100vw;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -1048,6 +1048,8 @@
   color: transparent;
   font-size: 24px;
   position: absolute;
+  max-width: 200px;
+
 }
 
 
@@ -1057,4 +1059,6 @@ position: absolute;
 font-family: "RangerRegular", sans-serif;
 transform: translateY(6px);
 filter: drop-shadow(0 0 33px #FF1A1A);
+max-width: 200px;
+
 }
