--- a/styles/Global.css
+++ b/styles/Global.css
@@ -536,7 +536,7 @@
   }
 
   .GreenEndScreen {
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
