--- a/styles/Global.css
+++ b/styles/Global.css
@@ -1069,7 +1069,7 @@
 .TextBottomScreenDiv img {
   width: 65px;
   position: absolute;
-  left: 20px;
+  left: 30px;
 }
 
 .BadgeModalScreen {
@@ -1077,6 +1077,10 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  position: absolute;
+  width: 100vw;
+  top: 1.5rem;
+  margin-left: 70px;
 }
 
 .BadgeModalScreen p:nth-of-type(1) {
