--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -1,5 +1,5 @@
 .LeaderBoardPage {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto', sans-serif;
